Inscription Utilisateurs via formulaire UI

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -8,6 +8,8 @@ fr:
             dépendant(e) existe
           has_many: Vous ne pouvez pas supprimer l'enregistrement parce que les %{record}
             dépendants existent
+    models:
+      user: Utilisateur
   date:
     abbr_day_names:
     - dim
