Ajout Pagination aux vues + tweak traductions pour gem will_paginate

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -218,3 +218,6 @@ fr:
       long: "%A %d %B %Y %Hh%M"
       short: "%d %b %Hh%M"
     pm: pm
+  will_paginate:
+    previous_label: "&#x27F5; Précédent"
+    next_label: "Suivant &#x27F6;"
